Autenticacion de usuarios completa con conexion a DB

--- a/ConsultaAlumnosClase.API/appsettings.Development.json
+++ b/ConsultaAlumnosClase.API/appsettings.Development.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ConsultaAlumnosDBConnectionString": "Data Source=ConsultaAlumnos.db"
+  },
   "Authentication": {
     "SecretForKey": "thisisthesecretforgeneratingakey(mustbeatleast32bitlong)",
     "Issuer": "https://localhost:7169", //Esto refiere a quién creó el token, en este caso la aplicación en localhost
